{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 511,
  "lineage": "45a090d9-ce06-19f9-ae61-bcc202143668",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180364491628:internet-gateway/igw-0a4bf4f1822669003",
            "id": "igw-0a4bf4f1822669003",
            "owner_id": "180364491628",
            "vpc_id": "vpc-03cf18cb281072e9c"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180364491628:route-table/rtb-0eb3fe8975ac0d7c0",
            "id": "rtb-0eb3fe8975ac0d7c0",
            "owner_id": "180364491628",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-03cf18cb281072e9c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180364491628:route-table/rtb-0bdbb4dc536c9fcc1",
            "id": "rtb-0bdbb4dc536c9fcc1",
            "owner_id": "180364491628",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a4bf4f1822669003",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-03cf18cb281072e9c"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed5cc5f2fcaf9493",
            "route_table_id": "rtb-0eb3fe8975ac0d7c0",
            "subnet_id": "subnet-04a2b7c1ced1a0e75"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08d1fdf2e4759537a",
            "route_table_id": "rtb-0bdbb4dc536c9fcc1",
            "subnet_id": "subnet-0db9ef3aa847565e1"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180364491628:subnet/subnet-04a2b7c1ced1a0e75",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04a2b7c1ced1a0e75",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "180364491628",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "udacity-private"
            },
            "tags_all": {
              "Name": "udacity-private"
            },
            "vpc_id": "vpc-03cf18cb281072e9c"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180364491628:subnet/subnet-0db9ef3aa847565e1",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0db9ef3aa847565e1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "180364491628",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "udacity-public"
            },
            "tags_all": {
              "Name": "udacity-public"
            },
            "vpc_id": "vpc-03cf18cb281072e9c"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:180364491628:vpc/vpc-03cf18cb281072e9c",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-048ce6bf788554b10",
            "default_route_table_id": "rtb-02525e9c6ea1b0ece",
            "default_security_group_id": "sg-074769bba4e8fec86",
            "dhcp_options_id": "dopt-07e749498410021b4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-03cf18cb281072e9c",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-02525e9c6ea1b0ece",
            "owner_id": "180364491628",
            "tags": {
              "Name": "udacity"
            },
            "tags_all": {
              "Name": "udacity"
            }
          }
        }
      ]
    }
  ]
}